--- a/twopointfour/package.json
+++ b/twopointfour/package.json
@@ -41,6 +41,8 @@
     ]
   },
   "devDependencies": {
-    "gh-pages": "^3.2.0"
+    "chai": "4.3.4",
+    "gh-pages": "^3.2.0",
+    "mocha": "8.4.0"
   }
 }
